2009-06-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (setMouseWheelEnabled): Use correct check for disable branch.

2009-06-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (mousePressed): Return immediately if chart is null.

2009-06-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/MultiplePiePlot.java
    (getLegendItems): Set the series key and index for each item,
    * source/org/jfree/chart/plot/SpiderWebPlot.java
    (getLegendItems): Likewise.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/function/PowerFunction2D.java: Implemented
    Serializable,
    (getA): New method,
    (getB): Likewise,
    (equals): New method override,
    (hashCode): Likewise,
    * tests/org/jfree/data/function/junit/PowerFunction2DTests.java: New file.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/function/NormalDistributionFunction2D.java:
    Implemented Serializable,
    (equals): New method override,
    (hashCode): Likewise,
    * tests/org/jfree/data/function/junit/NormalDistributionFunction2DTests.java:
    New file.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/function/LineFunction2D.java: Implemented
    Serializable,
    (getIntercept): New method,
    (getSlope): Likewise,
    (equals): New method override,
    (hashCode): Likewise,
    * tests/org/jfree/data/function/junit/LineFunction2DTests.java: New file.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
    (drawItem): Fixed bar alignment for inverted domain axis.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2795746 by Peter Kolb:
    * source/org/jfree/data/function/PolynomialFunction2D.java: New file,